k8s/dev2/simple-api-svc-external.yaml
apiVersion: v1
kind: Service

metadata:
  name: simple-api-svc
  namespace: api2
spec:
  type: ExternalName
  externalName: simple-api2.192.168.41.22.sslip.io
