k8s/dev2/istio-ingress.yaml
  


apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata:
  name: istio
  namespace: api2
spec:
  controller: istio.io/ingress-controller
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-api-ingress
  namespace: api2
spec:
  ingressClassName: istio
  rules:
  - host: "dev.simple-api.127.0.0.1.sslip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-api-svc
            port:
              number: 8080
