k8s/dev2/k8s-ingress-simple-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-api-ingress
  namespace: api2
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:

  rules:
  - host: "simple-api2.192.168.41.22.sslip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-api-svc
            port:
              number: 8080
