k8s/dev2/simple-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-vs
  namespace: api2 
spec:
  hosts:
  - "simple-api-svc.api.svc"
  

  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: simple-api-svc
        port:
          number: 8080
